--- a/css/base.css
+++ b/css/base.css
@@ -47,3 +47,10 @@ body{
     background-color: var(--branco);
     color: #000;
 }
+
+@media screen and (min-width: 1024px) {
+    .container {
+        padding-left: calc((100% - 940px)/2);
+        padding-right: calc((100% - 940px)/2);
+    }
+}
