--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -1,50 +1,72 @@
 .cabecalho {
-    color: var(--branco);
+  color: var(--branco);
 
-    width: 100%;
+  width: 100%;
 
-    box-sizing: border-box;
+  box-sizing: border-box;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    padding-top: .75rem;
-    padding-bottom: .75rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 
-    border-bottom: 1px solid var(--borda-cabecalho-mobile);
+  border-bottom: 1px solid var(--borda-cabecalho-mobile);
 
-    position: absolute;
-    
+  position: absolute;
 }
 
 .cabecalho__logo {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .cabecalho__navegacao {
-    text-align: center;
-    
+  text-align: center;
 }
 
-.cabecalho__navegacao::hover{
-    cursor: pointer;
-
+.cabecalho__navegacao::hover {
+  cursor: pointer;
 }
-
 
 .cabecalho__link {
-    font-size: 1.1rem;
+  font-size: 1.1rem;
 
-    display: inline-block;
+  display: inline-block;
 
-    margin-right: .7rem;
-    margin-bottom: 1.25rem;
-    margin-left: .7rem;
-    
-    
+  margin-right: 0.7rem;
+  margin-bottom: 1.25rem;
+  margin-left: 0.7rem;
+  position: relative;
 }
 
-.cabecalho__link:hover{
-    text-decoration: underline;
+.cabecalho__link:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  top: 1.25rem;
+  bottom: 0;
+  left: 0;
+  background-color: var(--branco);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.cabecalho__link:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+@media screen and (min-width: 1024px) {
+
+    .cabecalho{
+        flex-direction: row;
+        justify-content: space-between;
+        border: none;
+    }
+
+
+
 }
