--- a/css/base.css
+++ b/css/base.css
@@ -19,7 +19,9 @@
     --montserat: "montserrat", sans-serif;
 }
 
-
+html{
+    scroll-behavior:smooth
+}
 
 body{
     font-family: 'Open Sans', sans-serif;
