--- a/css/destaques.css
+++ b/css/destaques.css
@@ -42,3 +42,11 @@
     border-color: var(--vermelho-forte);
     margin: 0 auto;
 }
+
+@media screen and (max-width:480px){
+
+    .destaques__painel-imagem{
+        width: 100vw;
+    }
+
+}
